#
# Copyright 2021 Splunk Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[tool.poetry]
name = "solnlib"
version = "4.11.1"
description = "The Splunk Software Development Kit for Splunk Solutions"
authors = ["Splunk <addonfactory@splunk.com>"]
license = "Apache-2.0"
repository = "https://github.com/splunk/addonfactory-solutions-library-python"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.0"
sortedcontainers = "^2.2"
defusedxml = "^0.7.1"
splunk-sdk = ">=1.6.18"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.6"
mkdocstrings = "0.18.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
