#
# Copyright 2024 Splunk Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[tool.poetry]
name = "solnlib"
version = "4.12.0"
description = "The Splunk Software Development Kit for Splunk Solutions"
authors = ["Splunk <addonfactory@splunk.com>"]
license = "Apache-2.0"
repository = "https://github.com/splunk/addonfactory-solutions-library-python"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
urllib3 = "<2"
sortedcontainers = ">=2"
defusedxml = ">=0.7"
splunk-sdk = ">=1.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
mkdocs = ">=1"
mkdocs-material = ">=9"
mkdocstrings = {version=">=0", extras=["python"]}

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
