#
# Copyright 2025 Splunk Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[tool.poetry]
name = "solnlib"
version = "6.2.0-beta.1"
description = "The Splunk Software Development Kit for Splunk Solutions"
authors = ["Splunk <addonfactory@splunk.com>"]
license = "Apache-2.0"
repository = "https://github.com/splunk/addonfactory-solutions-library-python"
keywords = ["splunk", "ucc"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.14"
sortedcontainers = ">=2"
defusedxml = ">=0.7"
splunk-sdk = ">=2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
mkdocs = ">=1"
mkdocs-material = ">=9"
mkdocstrings = {version=">=0", extras=["python"]}
mkdocs-print-site-plugin = "^2.3.6"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
